2011-10-19  David Gilbert <david.gilbert@object-refinery.com>

    Bug 3072674:
    * org/jfree/data/statistics/DefaultStatisticalCategoryDataset.java
    (getRangeLowerBound): Check for NaN,
    (getRangeUpperBound): Likewise,
    (getRangeBounds): Call getRangeLowerBound() and getRangeUpperBound().

2011-10-19  David Gilbert <david.gilbert@object-refinery.com>

    Bug 3026341:
    * org/jfree/chart/renderer/xy/XYShapeRenderer.java
    (findDomainBounds): Check for null,
    (findRangeBounds): Likewise.

2011-10-18  David Gilbert <david.gilbert@object-refinery.com>

    Bug 3190615:
    * org/jfree/data/xy/CategoryTableXYDataset.java
    (clear): New method.

2011-10-16  David Gilbert <david.gilbert@object-refinery.com>

    * org/jfree/chart/plot/PiePlot.java
    (drawItem): Use new Paint lookup,
    (getArcCenter): New protected method,
    (lookupSectionPaint): Handle GradientPaint.

2011-10-16  David Gilbert <david.gilbert@object-refinery.com>

    * org/jfree/chart/util/ParamChecks.java: New class;
    * org/jfree/data/general/Series.java
    (vetoableChangeSupport): New field,
    (Series(Comparable, String)): Initialise vetoableChangeSupport,
    (setKey): Fire vetoable property change,
    (clone): Initialise vetoableChangeSupport,
    (addVetoableChangeListener): New method;
    * org/jfree/data/xy/XYSeriesCollection.java
    (XYSeriesCollection(XYSeries)): Register listener,
    (addSeries): Check for duplicate key, register listener,
    (removeSeries): Deregister listener,
    (removeAllSeries): Likewise,
    (getSeriesIndex): New method,
    (vetoableChange): New method.

2011-10-16  Martin Hoeller <martin.hoeller@xss.co.at>

    * org/jfree/chart/renderer/DefaultPolarItemRenderer.java
    (readObject): Handle fillComposite serialization;
    (writeObject): Likewise.

2011-10-15  David Gilbert <david.gilbert@object-refinery.com>

    * org/jfree/chart/renderer/xy/XYLineAndShapeRenderer.java