@@ -1,3 +1,10 @@
+2011-10-28  Martin Hoeller <martin.hoeller@xss.co.at>
+
+    Bug 3429707:
+    * org/jfree/chart/axis/LogAxis.java
+    (refreshTicksHorizontal): Fixed endless loop for 0 TickUnit
+    (refreshTicksVertical): Likewise;
+
 2011-10-19  David Gilbert <david.gilbert@object-refinery.com>
 
     Bug 3072674:
